--- a/index.html
+++ b/index.html
@@ -5,79 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A King's Fate</title>
   <style>
-    html, body {
+    * {
       margin: 0;
       padding: 0;
-      height: 100%;
+      box-sizing: border-box;
+    }
+
+    body, html {
       width: 100%;
+      height: 100%;
       overflow-x: hidden;
       font-family: Arial, sans-serif;
       background-color: black;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+    }
+
+    .fade-in {
+      opacity: 0;
+      animation-fill-mode: forwards;
     }
 
     #background {
-      position: fixed;
-      top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
-      background: url('kingsfatecover.jpg') center center / cover no-repeat;
-      opacity: 0;
-      animation: fadeInBackground 5s forwards;
-      z-index: -2;
-    }
-
-    @keyframes fadeInBackground {
-      to { opacity: 1; }
+      max-width: 100%;
+      height: auto;
+      animation: fadeInBg 5s forwards;
     }
 
     #title {
-      opacity: 0;
-      max-width: 90%;
-      margin-bottom: 20px;
+      width: 80%;
+      max-width: 600px;
+      margin-top: 20px;
       animation: fadeInTitle 2s forwards;
-      animation-delay: 5s; /* starts after background fade */
-      z-index: 1;
+      animation-delay: 5s;
+    }
+
+    #player {
+      width: 90%;
+      max-width: 600px;
+      height: 166px;
+      margin-top: 20px;
+      animation: fadeInPlayer 1s forwards;
+      animation-delay: 7s;
+    }
+
+    @keyframes fadeInBg {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     @keyframes fadeInTitle {
-      to { opacity: 1; }
-    }
-
-    #player-container {
-      opacity: 0;
-      width: 90%;
-      max-width: 600px;
-      animation: fadeInPlayer 1s forwards;
-      animation-delay: 7s; /* after background + title fade */
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes fadeInPlayer {
-      to { opacity: 1; }
-    }
-
-    /* Responsive iframe */
-    .soundcloud-iframe {
-      width: 100%;
-      height: 166px;
-      border: none;
-    }
-
-    /* Small screen adjustments */
-    @media (max-width: 600px) {
-      #title {
-        max-width: 95%;
-      }
-      #player-container {
-        height: 150px;
-      }
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <!-- Background -->
-  <div id="bac
+  <!-- Background Image -->
+  <img id="background" src="kingsfatecover.jpg" alt="Kings Fate Cover" class="fade-in">
+
+  <!-- Title Image -->
+  <img id="title" src="AKingsFate_Headlineshadow.png" alt="A King's Fate Title" class="fade-in">
+
+  <!-- SoundCloud Player -->
+  <iframe id="player" 
+    scrolling="no" 
+    frameborder="no" 
+    allow="autoplay" 
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2160026091&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false">
+  </iframe>
+</body>
+</html>
