--- a/index.html
+++ b/index.html
@@ -1,93 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A King's Fate</title>
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    html, body {
-      width: 100%;
-      height: 100%;
-      background-color: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow-x: hidden;
-      font-family: Arial, sans-serif;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A King's Fate</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-color: black;
+            overflow-x: hidden;
+            font-family: Arial, sans-serif;
+        }
 
-    #background {
-      position: absolute;
-      top:0; left:0;
-      width:100%; height:100%;
-      object-fit: cover;
-      z-index:0;
-      opacity:0;
-      animation: fadeInBg 5s forwards;
-    }
+        .background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('kingsfatecover.jpg') center center / cover no-repeat;
+            opacity: 0;
+            animation: fadeInBG 5s forwards;
+            z-index: -1;
+        }
 
-    #content {
-      position: relative;
-      z-index:1;
-      text-align:center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width:90%;
-      max-width:600px;
-    }
+        @keyframes fadeInBG {
+            to { opacity: 1; }
+        }
 
-    #title {
-      width:80%;
-      max-width:500px;
-      margin-bottom:20px;
-      opacity:0;
-      animation: fadeInTitle 2s forwards;
-      animation-delay:5s;
-    }
+        .title {
+            max-width: 90%;
+            width: 600px;
+            margin-top: 20px;
+            opacity: 0;
+            animation: fadeInTitle 2s forwards;
+            animation-delay: 5s;
+        }
 
-    /* Wrapper to fade in player */
-    #player-wrapper {
-      width:100%;
-      max-width:500px;
-      opacity:0;
-      animation: fadeInPlayer 1s forwards;
-      animation-delay:7s;
-    }
+        @keyframes fadeInTitle {
+            to { opacity: 1; }
+        }
 
-    iframe {
-      width:100%;
-      height:166px;
-      border:none;
-    }
+        .player-container {
+            max-width: 90%;
+            width: 600px;
+            margin-top: 20px;
+            opacity: 0;
+            animation: fadeInPlayer 2s forwards;
+            animation-delay: 7s;
+        }
 
-    @keyframes fadeInBg { from {opacity:0;} to {opacity:1;} }
-    @keyframes fadeInTitle { from {opacity:0; transform:translateY(-20px);} to {opacity:1; transform:translateY(0);} }
-    @keyframes fadeInPlayer { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
+        @keyframes fadeInPlayer {
+            to { opacity: 1; }
+        }
 
-    @media(max-width:400px){
-      #title { width:90%; }
-      iframe { height:140px; }
-    }
-  </style>
-</head>
-<body>
-
-  <img id="background" src="kingsfatecover.jpg" alt="Kings Fate Cover">
-
-  <div id="content">
-    <img id="title" src="AKingsFate_Headlineshadow.png" alt="A King's Fate Title">
-
-    <!-- Player inside wrapper -->
-    <div id="player-wrapper">
-      <iframe 
-        scrolling="no" 
-        allow="autoplay" 
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2160026091&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false">
-      </iframe>
-    </div>
-  </div>
-
-</body>
-</html>
+        iframe {
+            width: 100%;
+            height: 166px;
+            border: none;
+        }
