--- a/index.html
+++ b/index.html
@@ -1,68 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A King's Fate</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            background-color: black;
-            overflow-x: hidden;
-            font-family: Arial, sans-serif;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A King's Fate</title>
+  <style>
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-        .background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('kingsfatecover.jpg') center center / cover no-repeat;
-            opacity: 0;
-            animation: fadeInBG 5s forwards;
-            z-index: -1;
-        }
+    body, html {
+      height: 100%;
+      width: 100%;
+      font-family: Arial, sans-serif;
+      background-color: black;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-        @keyframes fadeInBG {
-            to { opacity: 1; }
-        }
+    /* Background image */
+    .background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('kingsfatecover.jpg') center center / cover no-repeat;
+      opacity: 0;
+      animation: fadeInBG 5s forwards;
+      z-index: -2;
+    }
 
-        .title {
-            max-width: 90%;
-            width: 600px;
-            margin-top: 20px;
-            opacity: 0;
-            animation: fadeInTitle 2s forwards;
-            animation-delay: 5s;
-        }
+    @keyframes fadeInBG {
+      to { opacity: 1; }
+    }
 
-        @keyframes fadeInTitle {
-            to { opacity: 1; }
-        }
+    /* Container for content so z-index layering works */
+    .content {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 90%;
+      max-width: 600px;
+    }
 
-        .player-container {
-            max-width: 90%;
-            width: 600px;
-            margin-top: 20px;
-            opacity: 0;
-            animation: fadeInPlayer 2s forwards;
-            animation-delay: 7s;
-        }
+    /* Title graphic */
+    .title {
+      width: 100%;
+      max-width: 600px;
+      margin-bottom: 20px;
+      opacity: 0;
+      animation: fadeInTitle 2s forwards;
+      animation-delay: 5s; /* starts after bg fade */
+    }
 
-        @keyframes fadeInPlayer {
-            to { opacity: 1; }
-        }
+    @keyframes fadeInTitle {
+      to { opacity: 1; }
+    }
 
-        iframe {
-            width: 100%;
-            height: 166px;
-            border: none;
-        }
+    /* Player */
+    .player-container {
+      width: 100%;
+      opacity: 0;
+      animation: fadeInPlayer 2s forwards;
+      animation-delay: 7s; /* after title fade */
+    }
+
+    @keyframes fadeInPlayer {
+      to { opacity: 1; }
+    }
+
+    iframe {
+      width: 100%;
+      height: 166px;
+      border: none;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 480px) {
+      .title { max-width: 90%; }
+      iframe { height: 140px; }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="background"></div>
+
+  <div class="content">
+    <img src="AKingsFate_Headlineshadow.png" alt="A King's Fate" class="title">
+
+    <div class="player-container">
+      <iframe 
+        scrolling="no" 
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2170291899&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false">
+      </iframe>
+      <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight: 100;">
+        <a href="https://soundcloud.com/bcmusicstudiogc" title="beeceestudio" target="_blank" style="color: #cccccc; text-decoration: none;">beeceestudio</a> · 
+        <a href="https://soundcloud.com/bcmusicstudiogc/a-kings-fate" title="A King's Fate" target="_blank" style="color: #cccccc; text-decoration: none;">A King's Fate</a>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
