--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A King's Fate</title>
   <style>
-    /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     html, body {
-      height: 100%;
       width: 100%;
+      height: 100%;
       font-family: Arial, sans-serif;
-      overflow-x: hidden;
       background-color: black;
+      overflow-x: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    /* Background image container with Ken Burns effect */
-    .background {
+    /* Fullscreen background image as <img> with Ken Burns effect */
+    .background-img {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('kingsfatecover.jpg') center center / cover no-repeat;
+      object-fit: cover;
       opacity: 0;
       animation: fadeInBG 5s forwards, kenBurns 30s ease-in-out infinite alternate;
       z-index: -2;
@@ -42,7 +41,6 @@
       100% { transform: scale(1.1) translate(-2%, -2%); }
     }
 
-    /* Content container */
     .content {
       position: relative;
       z-index: 1;
@@ -53,26 +51,24 @@
       max-width: 600px;
     }
 
-    /* Title graphic */
     .title {
       width: 100%;
       max-width: 500px;
       margin-bottom: 20px;
       opacity: 0;
       animation: fadeInTitle 2s forwards;
-      animation-delay: 5s; /* after bg fade */
+      animation-delay: 5s;
     }
 
     @keyframes fadeInTitle {
       to { opacity: 1; }
     }
 
-    /* SoundCloud player container */
     .player-container {
       width: 100%;
       opacity: 0;
       animation: fadeInPlayer 2s forwards;
-      animation-delay: 7s; /* after title fade */
+      animation-delay: 7s;
     }
 
     @keyframes fadeInPlayer {
@@ -85,7 +81,6 @@
       border: none;
     }
 
-    /* Responsive adjustments */
     @media (max-width: 480px) {
       .title { max-width: 90%; }
       iframe { height: 140px; }
@@ -94,12 +89,11 @@
 </head>
 <body>
 
-  <!-- Background with Ken Burns effect -->
-  <div class="background"></div>
+  <!-- Background image as <img> -->
+  <img src="kingsfatecover.jpg" alt="A King's Fate Background" class="background-img">
 
-  <!-- Foreground content -->
   <div class="content">
-    <img src="AKingsFate_Headlineshadow.png" alt="A King's Fate" class="title">
+    <img src="AKingsFate_Headlineshadow.png" alt="A King's Fate Title" class="title">
 
     <div class="player-container">
       <iframe 
@@ -107,12 +101,4 @@
         allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2170291899&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false">
       </iframe>
-      <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight: 100;">
-        <a href="https://soundcloud.com/bcmusicstudiogc" title="beeceestudio" target="_blank" style="color: #cccccc; text-decoration: none;">beeceestudio</a> · 
-        <a href="https://soundcloud.com/bcmusicstudiogc/a-kings-fate" title="A King's Fate" target="_blank" style="color: #cccccc; text-decoration: none;">A King's Fate</a>
-      </div>
-    </div>
-  </div>
-
-</body>
-</html>
+      <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight
