--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A King's Fate</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    html, body {
-      width: 100%;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      background-color: black;
-      overflow-x: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    /* Fullscreen background image as <img> with Ken Burns effect */
-    .background-img {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
+    html, body {
       height: 100%;
-      object-fit: cover;
+      width: 100%;
+      font-family: Arial, sans-serif;
+      overflow-x: hidden;
+      background: black;
+    }
+
+    /* Background image with fade-in and Ken Burns effect */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-image: url('kingsfatecover.jpg');
+      background-size: cover;
+      background-position: center;
       opacity: 0;
       animation: fadeInBG 5s forwards, kenBurns 30s ease-in-out infinite alternate;
       z-index: -2;
@@ -36,69 +39,51 @@
     }
 
     @keyframes kenBurns {
-      0%   { transform: scale(1) translate(0, 0); }
-      50%  { transform: scale(1.05) translate(-1%, -1%); }
-      100% { transform: scale(1.1) translate(-2%, -2%); }
+      0% { transform: scale(1) translate(0,0); }
+      100% { transform: scale(1.05) translate(0,-2%); }
     }
 
+    /* Container for title + player */
     .content {
       position: relative;
-      z-index: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       width: 90%;
       max-width: 600px;
+      margin: 0 auto;
+      top: 15%;
+      text-align: center;
+      color: white;
     }
 
-    .title {
-      width: 100%;
-      max-width: 500px;
-      margin-bottom: 20px;
+    /* Title graphic */
+    .title-img {
+      width: 80%;
+      max-width: 400px;
       opacity: 0;
       animation: fadeInTitle 2s forwards;
-      animation-delay: 5s;
+      animation-delay: 5s; /* wait for bg fade-in */
+      margin: 0 auto 20px auto;
     }
 
     @keyframes fadeInTitle {
       to { opacity: 1; }
     }
 
+    /* SoundCloud iframe */
     .player-container {
-      width: 100%;
       opacity: 0;
       animation: fadeInPlayer 2s forwards;
-      animation-delay: 7s;
+      animation-delay: 7s; /* after title fades in */
     }
 
     @keyframes fadeInPlayer {
       to { opacity: 1; }
     }
 
-    iframe {
+    /* Responsive iframe */
+    .player-container iframe {
       width: 100%;
+      max-width: 600px;
       height: 166px;
       border: none;
     }
-
-    @media (max-width: 480px) {
-      .title { max-width: 90%; }
-      iframe { height: 140px; }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Background image as <img> -->
-  <img src="kingsfatecover.jpg" alt="A King's Fate Background" class="background-img">
-
-  <div class="content">
-    <img src="AKingsFate_Headlineshadow.png" alt="A King's Fate Title" class="title">
-
-    <div class="player-container">
-      <iframe 
-        scrolling="no" 
-        allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2170291899&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false">
-      </iframe>
-      <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight
+  </s
