--- a/index.html
+++ b/index.html
@@ -5,58 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A King's Fate</title>
   <style>
-    /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin:0; padding:0; box-sizing:border-box; }
     html, body {
+      width: 100%;
       height: 100%;
-      width: 100%;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow-x: hidden;
       font-family: Arial, sans-serif;
-      background: url('kingsfatecover.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
     }
 
-    /* Container for title + player */
-    .content {
+    #background {
+      position: absolute;
+      top:0; left:0;
+      width:100%; height:100%;
+      object-fit: cover;
+      z-index:0;
+      opacity:0;
+      animation: fadeInBg 5s forwards;
+    }
+
+    #content {
       position: relative;
-      width: 90%;
-      max-width: 600px;
-      margin: 0 auto;
-      top: 15%;
-      text-align: center;
+      z-index:1;
+      text-align:center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:90%;
+      max-width:600px;
     }
 
-    /* Title graphic */
-    .title-img {
-      width: 80%;
-      max-width: 400px;
-      margin: 0 auto 20px auto;
+    #title {
+      width:80%;
+      max-width:500px;
+      margin-bottom:20px;
+      opacity:0;
+      animation: fadeInTitle 2s forwards;
+      animation-delay:5s;
     }
 
-    /* SoundCloud iframe */
-    .player-container iframe {
-      width: 100%;
-      max-width: 600px;
-      height: 166px;
-      border: none;
+    /* Wrapper to fade in player */
+    #player-wrapper {
+      width:100%;
+      max-width:500px;
+      opacity:0;
+      animation: fadeInPlayer 1s forwards;
+      animation-delay:7s;
     }
 
-    /* Responsive text under iframe */
-    .player-info {
-      font-size: 10px;
-      color: #cccccc;
-      line-break: anywhere;
-      word-break: normal;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
-      font-weight: 100;
-      margin-top: 5px;
+    iframe {
+      width:100%;
+      height:166px;
+      border:none;
     }
-  </sty
+
+    @keyframes fadeInBg { from {opacity:0;} to {opacity:1;} }
+    @keyframes fadeInTitle { from {opacity:0; transform:translateY(-20px);} to {opacity:1; transform:translateY(0);} }
+    @keyframes fadeInPlayer { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
+
+    @media(max-width:400px){
+      #title { width:90%; }
+      iframe { height:140px; }
+    }
+  </style>
+</head>
+<body>
+
+  <img id="background" src="kingsfatecover.jpg" alt="Kings Fate Cover">
+
+  <div id="content">
+    <img id="title" src="AKingsFate_Headlineshadow.png" alt="A King's Fate Title">
+
+    <!-- Player inside wrapper -->
+    <div id="player-wrapper">
+      <iframe 
+        scrolling="no" 
+        allow="autoplay" 
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2160026091&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false">
+      </iframe>
+    </div>
+  </div>
+
+</body>
+</html>
